--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "jimp": "^0.22.8",
     "json-bigint": "^1.0.0",
     "node-fetch": "^3.3.0",
-    "puppeteer": "^19.7.5",
+    "puppeteer-core": "^5.3.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "uuid": "^9.0.0"
