--- a/package.json
+++ b/package.json
@@ -35,4 +35,12 @@
     "uuid": "^9.0.0"
   },
   "homepage": "https://github.com/realcoloride/node_characterai#readme"
+},
+
+  "engines": {
+
+    "node": ">= 12.14.0"
+
+  }
+
 }
