--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "uuid": "^9.0.0"
   },
-  "homepage": "https://github.com/realcoloride/node_characterai#readme"
-  },
+  "homepage": "https://github.com/realcoloride/node_characterai#readme",
   "engines": {
     "node": ">= 12.14.0"
   }
